all changed throughout the entire course

--- a/course4/week2-ungraded-labs/C4_W2_Lab_2_Intro_to_Kubernetes/yaml/deployment.yaml
+++ b/course4/week2-ungraded-labs/C4_W2_Lab_2_Intro_to_Kubernetes/yaml/deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: tf-serving
-        image: tensorflow/serving
+        # image: tensorflow/serving
+        image: emacski/tensorflow-serving
         envFrom:
         - configMapRef:
             name: tfserving-configs
