--- a/course4/week2-ungraded-labs/C4_W2_Lab_1_FastAPI_Docker/with-batch/Dockerfile
+++ b/course4/week2-ungraded-labs/C4_W2_Lab_1_FastAPI_Docker/with-batch/Dockerfile
@@ -1,4 +1,5 @@
-FROM frolvlad/alpine-miniconda3:python3.7
+# FROM frolvlad/alpine-miniconda3:python3.7
+FROM continuumio/miniconda3
 
 COPY requirements.txt .
 
